hphp/hack/test/typecheck/fc_enum_case_1.php.like_types.exp
File "fc_enum_case_1.php", line 9, characters 10-16:
Invalid return type (Typing[4336])
File "fc_enum_case_1.php", line 9, characters 10-16:
Expected void because this function does not always return a value
File "fc_enum_case_1.php", line 9, characters 27-29:
But got int
